fix: toolbar color

--- a/src/infrastructure/web/app/scale-detail-page/scale-detail-page.component.html
+++ b/src/infrastructure/web/app/scale-detail-page/scale-detail-page.component.html
@@ -1,7 +1,7 @@
 @let scale = (scale$ | async)!;
 
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="default">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/" text="Scales"></ion-back-button>
     </ion-buttons>
