--- a/src/infrastructure/web/app/scale-detail-page/scale-detail-page.component.html
+++ b/src/infrastructure/web/app/scale-detail-page/scale-detail-page.component.html
@@ -1,6 +1,6 @@
 @let scale = (scale$ | async)!;
 
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar color="default">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/" text="Scales"></ion-back-button>
